HMS-2667 fix: align wizard page 1
Align the preparation wizard page with what is defined in the mock-ups.

--- a/src/Routes/WizardPage/Components/PagePreparation/PagePreparation.scss
+++ b/src/Routes/WizardPage/Components/PagePreparation/PagePreparation.scss
@@ -1,9 +1,1 @@
 @import '~@redhat-cloud-services/frontend-components-utilities/styles/variables';
-
-.domain-type-select {
-  width: 50%;
-}
-
-.domain-item-margin-left {
-  margin-left: 16px;
-}
